--- a/views/invoices/index.ejs
+++ b/views/invoices/index.ejs
@@ -58,6 +58,7 @@
                                                             <th>Amount</th>
                                                             <th>Invoice Number</th>
                                                             <th>Email</th>
+                                                            <th>Phone Number</th>
                                                             <th>Due</th>
                                                             <th>Created</th>
                                                             <th>Status</th>
@@ -86,6 +87,9 @@
                                                                     <%= invoice.customer_email %>
                                                                 </a>
 
+                                                            </td>
+                                                            <td>
+                                                                <%= invoice.customer_phone%>
                                                             </td>
 
                                                             <td>
