Add footer to all pages. Fix layouts.

--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -97,6 +97,8 @@
             </div>
         </div>
         <!-- page-body-wrapper ends -->
+        <!-- partial:partials/_footer.html -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- container-scroller -->
 
