--- a/views/dashboards/customer.ejs
+++ b/views/dashboards/customer.ejs
@@ -60,11 +60,11 @@
             </div>
           </div>
         </div>
-
-        <%- include('../partials/footer.ejs'); %>
       </div>
     </div>
     <!-- page-body-wrapper ends -->
+    <!-- partial:partials/_footer.html -->
+    <%- include('../partials/footer.ejs'); %>
   </div>
   <!-- container-scroller -->
 
