--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -117,6 +117,8 @@
                 </div>
             </div>
         </div>
+        <!-- partial:partials/_footer.html -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- page-body-wrapper ends -->
     </div>
