--- a/views/charges/index.ejs
+++ b/views/charges/index.ejs
@@ -128,6 +128,8 @@
                 </div>
             </div>
         </div>
+        <!-- partial:partials/_footer.html -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- page-body-wrapper ends -->
     </div>
