--- a/views/history/index.ejs
+++ b/views/history/index.ejs
@@ -118,6 +118,8 @@
                 </div>
             </div>
         </div>
+        <!-- partial:partials/_footer.html -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- page-body-wrapper ends -->
     </div>
