--- a/views/invoices/index.ejs
+++ b/views/invoices/index.ejs
@@ -124,6 +124,8 @@
                 </div>
             </div>
         </div>
+        <!-- partial:partials/_footer.html -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- page-body-wrapper ends -->
     </div>
