--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -124,6 +124,8 @@
             </div>
         </div>
         <!-- page-body-wrapper ends -->
+        <!-- partial:partials/_footer.html -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- container-scroller -->
 
