--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -117,10 +117,9 @@
                 </div>
             </div>
         </div>
+        <!-- partial:partials/_footer.html -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
-    <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
 
     <!-- plugins:js -->
     <script src="../vendors/js/vendor.bundle.base.js"></script>
