--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -170,7 +170,7 @@
                 </div>
             </div>
         </div>
-        <!-- page-body-wrapper ends -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- container-scroller -->
 
