--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
+</head>
 
 <body class="sidebar-icon-only">
     <div class="container-scroller">
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-        <!-- page-body-wrapper ends -->
+        <%- include('../partials/footer.ejs'); %>
     </div>
     <!-- container-scroller -->
 
