--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -202,10 +202,8 @@
                 </div>
             </div>
         </div>
+        <%- include('../partials/footer.ejs'); %>
     </div>
-    <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
 
     <!-- plugins:js -->
     <script src="../vendors/js/vendor.bundle.base.js"></script>
