--- a/views/subscriptions/handleInvalidSubscriptions.ejs
+++ b/views/subscriptions/handleInvalidSubscriptions.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>My Cars </title>
+    <title>Handle Invalid Subscriptions </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -44,34 +44,10 @@
                     <div class="row">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
-                                <div class="col-12 grid-margin stretch-card">
+                                <div class="col-12 col-lg-4 col-lg-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <div class="d-sm-flex justify-content-between align-items-start">
-                                                <div>
-                                                    <h4 class="card-title card-title-dash">Handle Expired Cars</h4>
-                                                </div>
-
-                                            </div>
-                                            <br>
-                                            <div class="table-responsive  mt-1">
-                                                <table id="users" class="table table-hover stripe">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Brand</th>
-                                                            <th>Model</th>
-                                                            <th>Plate</th>
-                                                            <th>Services (Qty.)</th>
-                                                            <%# if(canManageCars) { %>
-                                                            <th>Action</th>
-                                                            <%# } %>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                
-                                                    </tbody>
-                                                </table>
-                                            </div>
+                                            <%- include('../partials/subscriptions/information.ejs' , {subscriptions: invalidSubs, showManageBtn : false, customer : user, showCreateBtn: false}); %>
                                         </div>
                                     </div>
                                 </div>
@@ -103,8 +79,6 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
 
@@ -112,7 +86,6 @@
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
-    <script src="../js/Chart.roundedBarCharts.js"></script>
 
     <!-- End custom js for this page-->
     <script src="../js/helper-functions.js"></script>
