--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -188,6 +188,8 @@
     <!-- <script src="../js/Chart.roundedBarCharts.js"></script> -->
     <script src="../vendors/select2/select2.min.js"></script>
     <script src="../js/select2.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+
     <!-- End custom js for this page-->
     <script>
         jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
