--- a/views/subscriptions/handleInvalidSubscriptions.ejs
+++ b/views/subscriptions/handleInvalidSubscriptions.ejs
@@ -8,7 +8,7 @@
     <title>Handle Invalid Subscriptions </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
-    <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css"> -->
     <link rel="stylesheet" href="../vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
@@ -68,9 +68,6 @@
     <script src="../vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
-    <script src="../vendors/chart.js/Chart.min.js"></script>
-    <script src="../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-    <script src="../vendors/progressbar.js/progressbar.min.js"></script>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
