Add user_id to car model. Change queries to find user cars. Implement function to handle user_id undefined on cars.

--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -190,7 +190,7 @@
                                 <div class="col-md-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <%- include('../partials/subscriptions/information.ejs' , {subscriptions, showManageBtn : true, customer : customer, showCreateBtn: false}); %>
+                                            <%- include('../partials/subscriptions/information.ejs' , {templateTitle: "Memberships", subscriptions, showManageBtn : true, customer : customer, showCreateBtn: false}); %>
                                         </div>
                                     </div>
                                 </div>
