--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -1,7 +1,7 @@
 <div class="d-sm-flex justify-content-between align-items-start">
     <div>
         <h4 class="card-title card-title-dash">
-            Memberships
+            <%= templateTitle%>
         </h4>
     </div>
     <div class="d-sm-flex justify-content-between align-items-start float-end">
@@ -80,8 +80,8 @@
                         </li>
                         <% } %>
                         <li class="mt-0 mb-0 m-3">
-                            <a href="/cars/create?itemID=<%- item.id%>" id="add-car-button" class="btn btn-warning p-2"
-                                style="margin: 0;" type="submit">
+                            <a href="/cars/create?itemID=<%- item.id%>&userID=<%- customer.id%>" id="add-car-button"
+                                class="btn btn-warning p-2" style="margin: 0;" type="submit">
                                 Add Missing Car</a>
                         </li>
                         <% } else if(item.cars.length > item.data.quantity) { %>
