--- a/views/partials/subscriptions/subscriptions.ejs
+++ b/views/partials/subscriptions/subscriptions.ejs
@@ -37,7 +37,7 @@
 
                         <!-- </div> -->
                         <!-- <br> -->
-                        <%- include('./information.ejs' , {subscriptions, showManageBtn : false, customer : user, showCreateBtn: true}); %>
+                        <%- include('./information.ejs' , {templateTitle: "Memberships", subscriptions, showManageBtn : false, customer : user, showCreateBtn: true}); %>
                         <p class="mt-4 text-muted">
                             Not happy with your current plan? Cancel or Upgrade by clicking the
                             button below.
